# VirtualBus

./: .git-ci.yml  CMakeLists.txt  LICENSE  README.md  fetch_and_build.ps1  fetch_and_build.py  fetch_and_build.sh  increment_version.py
.github/workflows/: c-cpp.yml
cmake/: toolchain.cmake
externallib/: candefenation.h
libs/unicore/include/: Configuration.h  DiagnosticTask.h  ErrorHandler.h  ILogger.h  IStorage.h  JsonCmdParser.h  JsonStorage.h  ReciveTask.h  ReturnType.h  SendTask.h  SpdLogWrapper.h  StdCoutLogger.h  Task.h  ThreadPool.h  VirtualBus.h  VirtualBusCmd.h  Watchdog.h
libs/unicore/src/: ErrorHandler.cpp  ThreadPool.cpp  VirtualBus.cpp  VirtualBusCmd.cpp
src/: BatteryCommand.h  BatteryCommandParser.h  InverterCommand.cpp  InverterCommand.h  InverterCommandParser.h  main.cpp
tests/: test_main.cpp
